Updated CSS and HTML with new font awesome icon

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
         <h1>
           Potluck Guest List
         </h1>
+        
 
         <h3>
-          <i class="fa fa-envelope" aria-hidden="true"></i> Invite 8 people! :)
+          <i class="fa-solid fa-champagne-glasses" aria-hidden="true"></i> Invite 8 people! :)
         </h3>
       </header>
       <div class="add-guest">
