Updated icon in HTML

--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
         <h1>
           Potluck Guest List
         </h1>
-        
 
         <h3>
-          <i class="fa-solid fa-champagne-glasses" aria-hidden="true"></i> Invite 8 people! :)
+          <i class="fas fa-glass-cheers" aria-hidden="true"></i> Invite 8 people! :)
         </h3>
       </header>
       <div class="add-guest">
