--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </h1>
 
         <h3>
-          <i class="fas fa-glass-cheers" aria-hidden="true"></i> Invite 8 people! :)
+          <i class="fas fa-glass-cheers" aria-hidden="true"></i> Invite 8 people! 🥳
         </h3>
       </header>
       <div class="add-guest">
